test/tests/compiler/6_statements_and_conditional_expressions/valid/ternary.plx
pub fn main(none) i32 {
    a: i32 = 0
    return ? a > -1 then 4 else 5
}
