test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/undeclared_var_in_ternary.plx
pub fn main(none) i32 {
    return ? a > 0 then 1 else 2
    a: i32 = 5
}
